# bracer

./: .ghci  .gitignore  C2Swift.hs  LICENSE  Main.hs  Overture.hs  README.md  Test.hs  bracer.cabal  stack.yaml
Language/: Bracer.hs
Language/Bracer/: Parser.hs  Parsing.hs  Pretty.hs  Syntax.hs  Transformations.hs
Language/Bracer/Backends/: C.hs  Swift.hs
Language/Bracer/Backends/C/: IdentifierStyle.hs  Parser.hs  Pretty.hs  Scribe.hs  Syntax.hs  Types.hs
Language/Bracer/Backends/C/Parser/: Expressions.hs  Identifiers.hs  Internal.hs  Literals.hs  Statements.hs  Types.hs  Variables.hs
Language/Bracer/Backends/Swift/: Predefined.hs  Syntax.hs
Language/Bracer/Syntax/: Expressions.hs  Identifiers.hs  Lenses.hs  Literals.hs  Names.hs  Operators.hs  Types.hs  Variables.hs
Language/Bracer/Test/: C.hs  Internal.hs
Language/Bracer/Test/Examples/: BinaryLiterals.hs
Language/Bracer/Transformations/: Failure.hs
docs/: c_declarations.md
