name:                bracer
version:             0.1.0.0
synopsis:            a rewriting system for curly-brace languages
homepage:            http://github.com/patrickt/bracer
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
                     , bytestring == 0.10.4.*
                     , compdata == 0.7.0.1
                     , hashable == 1.2.1.*
                     , data-default == 0.5.*
                     , lens == 4.1.2
                     , mtl == 2.1.2
                     , parsers == 0.11
                     , scientific == 0.2.0.*
                     , trifecta == 1.4.2.*
                     , unordered-containers == 0.2.*

  default-language:    Haskell2010

  default-extensions:  DeriveFunctor
                     , DeriveFoldable
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , QuasiQuotes
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators

  exposed-modules:     Language.Bracer
                     , Language.Bracer.Parsing
                     , Language.Bracer.Syntax
                     , Language.Bracer.Backends.C
                     , Language.Bracer.Backends.C.IdentifierStyle
                     , Language.Bracer.Backends.C.Parser
                     , Language.Bracer.Backends.C.Types

  ghc-options:         -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs
  other-modules:       Overture
