name:                bracer
version:             0.1.1.0
synopsis:            a rewriting system for curly-brace languages
homepage:            http://github.com/patrickt/bracer
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

-- NOTE: PT: to enable code coverage add -fhpc to both targets
-- then cabal run test, then hpc report test.tix

library
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , compdata
                     , hashable
                     , data-default
                     , lens
                     , mtl
                     , parsers
                     , scientific
                     , semigroups
                     , trifecta
                     , vector
                     , unordered-containers
                     , utf8-string

  default-language:    Haskell2010

  default-extensions:  ConstraintKinds
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , QuasiQuotes
                     , RankNTypes
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances

  exposed-modules:     Language.Bracer
                     , Language.Bracer.Parsing
                     , Language.Bracer.Pretty
                     , Language.Bracer.Syntax
                     , Language.Bracer.Syntax.Names
                     , Language.Bracer.Syntax.Lenses
                     , Language.Bracer.Syntax.Variables
                     , Language.Bracer.Backends.C
                     , Language.Bracer.Backends.C.Parser
                     , Language.Bracer.Backends.C.Parser.Expressions
                     , Language.Bracer.Backends.C.Parser.Identifiers
                     , Language.Bracer.Backends.C.Parser.Internal
                     , Language.Bracer.Backends.C.Parser.Literals
                     , Language.Bracer.Backends.C.Parser.Statements
                     , Language.Bracer.Backends.C.Parser.Types
                     , Language.Bracer.Backends.C.Parser.Variables
                     , Language.Bracer.Backends.C.Pretty
                     , Language.Bracer.Backends.C.Scribe
                     , Language.Bracer.Backends.C.Syntax
                     , Language.Bracer.Backends.Swift
                     , Language.Bracer.Backends.Swift.Syntax

  ghc-options:         -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs
  other-modules:       Overture

executable test
  build-depends:       base
                     , bracer
                     , ansi-wl-pprint
                     , bytestring
                     , compdata
                     , hashable
                     , data-default
                     , lens
                     , mtl
                     , parsers
                     , scientific
                     , semigroups
                     , trifecta
                     , vector
                     , unordered-containers
                     , utf8-string
                     , hspec == 2.*
                     , HUnit
                     , QuickCheck

  default-language:    Haskell2010

  default-extensions:  ConstraintKinds
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances

  main-is:              Test.hs

  ghc-options:         -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs
  other-modules:       Overture

executable c2swift
  build-depends:       base
                     , bracer
                     , ansi-wl-pprint
                     , bytestring
                     , compdata
                     , hashable
                     , data-default
                     , lens
                     , mtl
                     , parsers
                     , scientific
                     , semigroups
                     , trifecta
                     , vector
                     , unordered-containers
                     , utf8-string

  default-language:    Haskell2010

  default-extensions:  ConstraintKinds
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances

  main-is:             C2Swift.hs

  ghc-options:         -Wall -fno-warn-orphans -fno-warn-missing-signatures -fwarn-tabs
  other-modules:       Overture
